--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,9 @@
 /*top*/
 .index_top {
   position: relative;
-  padding-bottom: 55%;
-  background-position: center;
+  width: 100%;
+  height: 760px;
+  background-position: center 35%;
   background-size: cover;
 }
 .index_top::before {
@@ -23,22 +24,24 @@
 }
 .index_top .title {
   position: absolute;
-  right: 7%;
-  top: 28%;
+  right: 0;
+  top: 35%;
+  width: 100%;
   color: #fff;
   font-weight: 500;
   z-index: 3;
-  font-size: 4.25rem;
-  letter-spacing: 10px;
+  font-size: 2.65rem;
+  letter-spacing: 5px;
+  text-align: right;
 }
-.index_top .title::after {
+.index_top .title span::after {
   content: '';
   display: block;
-  width: 220px;
+  width: 150px;
   margin-left: auto;
   margin-right: 15px;
   border-bottom: 7px solid #fff;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 .index_top .text {
   position: absolute;
@@ -50,20 +53,20 @@
 .index_top .text span {
   display: block;
   color: #fff;
-  font-size: 2.5rem;
-  margin-bottom: 55px;
+  font-size: 1.85rem;
+  margin-bottom: 35px;
   letter-spacing: 10px;
   font-weight: 500;
 }
 .index_top .text .arrow_down {
-  width: 50px;
-  height: 50px;
-  border: 3px solid #fff;
+  width: 35px;
+  height: 35px;
+  border: 2px solid #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-radius: 100%;
   margin: 0 auto;
   cursor: pointer;
@@ -76,44 +79,22 @@
 .index_top .text .arrow_down:hover i {
   transform: translateY(5px);
 }
-@media (max-width: 1700px) {
-  .index_top {
-    padding-bottom: 65%;
-  }
-  .index_top .title {
-    font-size: 4rem;
-  }
-}
 @media (max-width: 1200px) {
-  .index_top .title {
-    font-size: 2.75rem;
+  .index_top {
+    height: 500px;
   }
-  .index_top .title::after {
-    margin-top: 40px;
+  .index_top .title {
+    top: 25%;
+    font-size: 2rem;
+    text-align: center;
   }
   .index_top .text span {
     font-size: 2rem;
     margin-bottom: 30px;
   }
-}
-@media (max-width: 800px) {
-  .index_top {
-    padding-bottom: 120%;
-  }
-  .index_top .title {
-    left: 50%;
-    right: unset;
-    width: 100%;
-    transform: translateX(-50%);
-    font-size: 2.25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .index_top .title::after {
-    margin: 0;
-    margin-top: 20px;
+  .index_top .title span::after {
     width: 100px;
+    margin: 20px auto 0 auto;
     border-bottom: 2px solid #fff;
   }
   .index_top .text {
@@ -132,23 +113,7 @@
     border-width: 3px;
   }
 }
-@media (max-width: 500px) {
-  .index_top {
-    padding-bottom: 120%;
-  }
-  .index_top .title {
-    font-size: 1.25rem;
-  }
-  .index_top .text span {
-    font-size: 1rem;
-  }
-  .index_top .text .arrow_down {
-    width: 35px;
-    height: 35px;
-    font-size: 1rem;
-    border-width: 2px;
-  }
-}
+
 /*關於我們*/
 .index_about .con {
   display: flex;
@@ -162,61 +127,59 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 60px 0;
+  padding: 40px 0;
 }
 .index_about .con .left ul.list {
   list-style: none;
   padding-left: 0;
-  margin-bottom: 250px;
+  margin-bottom: 120px;
   display: flex;
 }
 .index_about .con .left ul.list li {
-  margin-right: 110px;
+  margin-right: 66px;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 .index_about .con .left ul.list li:last-child {
   margin-right: 0;
 }
 .index_about .con .left ul.list li img {
   display: block;
-  max-width: 100%;
+  max-width: 45px;
   margin-bottom: 25px;
 }
 .index_about .con .right {
-  padding-top: 140px;
-  padding-bottom: 340px;
-  padding-left: 80px;
-  padding-right: 15px;
+  padding-top: 100px;
+  padding-bottom: 200px;
+  padding-left: 50px;
   position: relative;
 }
 .index_about .con .right .title {
-  font-size: 3rem;
-  color: rgb(27 113 160);
+  font-size: 2.25rem;
+  color: #0185cd;
   font-weight: 700;
   letter-spacing: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 .index_about .con .right .desc {
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   line-height: 2;
-  letter-spacing: 3px;
-  margin-bottom: 65px;
+  margin-bottom: 40px;
 }
 .index_about .con .right .more {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
 }
 .index_about .con .right .more a {
-  width: 138px;
-  height: 40px;
-  background-color: rgb(27 113 160);
+  width: 100px;
+  height: 30px;
+  background-color: #0185cd;
   color: #fff;
-  font-size: 1.25rem;
+  font-size: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -228,31 +191,32 @@
 }
 .index_about .con .right .mask {
   color: rgb(234 234 234);
-  font-size: 10rem;
+  font-size: 5rem;
   font-weight: 900;
   letter-spacing: 20px;
   text-align: right;
   line-height: 1;
   position: absolute;
-  right: -160px;
-  bottom: 170px;
+  right: -40px;
+  bottom: 120px;
 }
 .index_about .con .float_img {
-  width: 810px;
+  width: 540px;
   position: absolute;
   left: 50%;
   bottom: -20%;
   transform: translateX(-70%);
+  box-shadow: 5px 5px 16px #00000094;
 }
-@media (max-width: 1658px) {
-  .index_about .con .right {
-    overflow-x: hidden;
-  }
-  .index_about .con .float_img {
-    width: 750px;
+@media (max-width: 1223px) {
+  .index_about .con .right .mask {
+    right: 0;
   }
 }
 @media (max-width: 1200px) {
+  .index_about .container {
+    max-width: 100%;
+  }
   .index_about .con {
     flex-wrap: wrap;
   }
@@ -300,8 +264,8 @@
 /*所有商品*/
 .index_products {
   background-color: #efefef;
-  margin-top: -100px;
-  padding-top: 400px;
+  margin-top: -70px;
+  padding-top: 280px;
   padding-bottom: 35px;
 }
 .index_products .title {
@@ -315,14 +279,14 @@
   left: 0;
   top: 50%;
   width: 100%;
-  border-bottom: 2px solid rgb(27 113 160);
+  border-bottom: 2px solid #0185cd;
 }
 .index_products .title span {
-  font-size: 2.5rem;
-  color: rgb(27 113 160);
+  font-size: 2rem;
+  color: #0185cd;
   font-weight: 700;
   position: relative;
-  padding: 0 100px;
+  padding: 0 30px;
   z-index: 2;
   background-color: #efefef;
   letter-spacing: 10px;
@@ -331,7 +295,7 @@
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 75px;
-  border-bottom: 2px solid rgb(27 113 160);
+  border-bottom: 2px solid #0185cd;
   margin-bottom: 35px;
 }
 .index_products .list a.item {
@@ -346,7 +310,7 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: rgb(27 113 160);
+  background-color: #0185cd;
   opacity: 0.4;
   display: none;
 }
@@ -364,7 +328,7 @@
   align-items: center;
   justify-content: center;
   color: #fff;
-  font-size: 2.25rem;
+  font-size: 1.75rem;
   display: none;
 }
 .index_products .list a.item:hover::after {
@@ -381,15 +345,15 @@
   justify-content: flex-end;
 }
 .index_products .more a {
-  width: 175px;
-  height: 55px;
-  background-color: rgb(27 113 160);
+  width: 120px;
+  height: 36px;
+  background-color: #0185cd;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
   text-decoration: none;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   border-radius: 50px;
 }
 .index_products .more a:hover {
@@ -427,7 +391,7 @@
 .index_float {
   display: flex;
   justify-content: flex-end;
-  background-position: center;
+  background-position: center 60%;
   background-size: cover;
 }
 .index_float .text {
@@ -447,13 +411,12 @@
   opacity: 0.75;
 }
 .index_float .text .con {
-  padding: 140px 0 100px 165px;
+  padding: 120px 0 100px 100px;
 }
 .index_float .text .con .title {
-  font-size: 3rem;
-  color: rgb(27 113 160);
+  font-size: 2.25rem;
+  color: #0185cd;
   font-weight: 700;
-
   letter-spacing: 10px;
   margin-bottom: 35px;
 }
@@ -464,33 +427,28 @@
 .index_float .text .con .title::after {
   content: '';
   display: block;
-  width: 165px;
-  border-bottom: 10px solid rgb(27 113 160);
-  margin-top: 35px;
+  width: 115px;
+  border-bottom: 8px solid #0185cd;
+  margin-top: 25px;
 }
 .index_float .text .con .title span.arrow_right {
-  width: 40px;
-  height: 40px;
-  border: 4px solid rgb(27 113 160);
+  width: 37px;
+  height: 37px;
+  border: 3px solid #0185cd;
   border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 55px;
+  margin-left: 20px;
   letter-spacing: 0;
 }
 .index_float .text .con .title span.arrow_right i {
-  font-size: 2.25rem;
+  font-size: 1.5rem;
 }
 .index_float .text .con .desc {
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 2;
   letter-spacing: 2px;
-}
-@media (max-width: 1658px) {
-  .index_float .text .con {
-    padding: 140px 0 100px 100px;
-  }
 }
 @media (max-width: 1200px) {
   .index_float .text {
@@ -524,37 +482,39 @@
 }
 /*最新消息*/
 .index_news {
-  position: relative;
   margin: 80px auto;
-  max-width: 1160px;
+  max-width: 825px;
   padding: 0 15px;
 }
-.index_news::before {
+.index_news .con {
+  position: relative;
+}
+.index_news .con::before {
   content: 'NEWS';
-  -webkit-text-stroke: 1px rgb(27 113 160);
-  font-size: 5rem;
+  -webkit-text-stroke: 1px #0185cd;
+  font-size: 3rem;
   color: transparent;
   position: absolute;
   top: 10px;
-  left: -30px;
-  transform: translateX(-100%);
+  left: 0px;
+  transform: translateX(-50%);
   letter-spacing: 10px;
 }
 .index_news .con .title {
-  font-size: 2.25rem;
+  font-size: 2rem;
   font-weight: 700;
-  color: rgb(27 113 160);
-  margin-bottom: 20px;
+  color: #0185cd;
+  margin-bottom: 10px;
   text-align: center;
   letter-spacing: 10px;
 }
 .index_news .con .sub_title {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   display: flex;
   justify-content: center;
   letter-spacing: 5px;
   padding-bottom: 30px;
-  border-bottom: 2px solid rgb(27 113 160);
+  border-bottom: 2px solid #0185cd;
 }
 .index_news .con .sub_title::before {
   content: '-';
@@ -565,17 +525,17 @@
   margin-left: 20px;
 }
 .index_news .con .list {
-  padding-top: 25px;
+  padding-top: 10px;
 }
 .index_news .con .list .item {
   display: flex;
   align-items: center;
-  font-size: 2.15rem;
+  font-size: 1.5rem;
   text-decoration: none;
   color: #333;
-  padding-bottom: 25px;
-  border-bottom: 1px solid rgb(27 113 160);
-  margin-bottom: 25px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #0185cd;
+  margin-bottom: 10px;
 }
 .index_news .con .list .item:hover {
   opacity: 0.8;
@@ -586,12 +546,16 @@
   border: none;
 }
 .index_news .con .list .item .time {
-  color: rgb(27 113 160);
-  margin-right: 85px;
+  color: #0185cd;
+  font-weight: 700;
+  margin-right: 60px;
 }
 @media (max-width: 1200px) {
   .index_news {
     margin: 50px auto;
+  }
+  .index_news .con::before{
+    display: none;
   }
   .index_news .con .title {
     font-size: 1.75rem;
