--- a/css/products.css
+++ b/css/products.css
@@ -6,27 +6,31 @@
 .product_frame .left_menu {
   flex: 1;
   background-color: #eaeaea;
-  padding: 100px 0;
-  margin-right: 70px;
+  padding: 60px 0;
+  margin-right: 30px;
 }
 .product_frame .left_menu .left_menu_border {
-  width: 370px;
+  width: 240px;
   margin: 0 auto;
 }
 .product_frame .left_menu .left_menu_border .title {
   color: #0185cd;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+  line-height: 1;
 }
 .product_frame .left_menu .left_menu_border > ul {
   list-style: none;
   padding-left: 0;
-  font-size: 2rem;
+  font-size: 1.5rem;
   letter-spacing: 7px;
 }
 .product_frame .left_menu .left_menu_border > ul > li {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+.product_frame .left_menu .left_menu_border > ul > li:last-child {
+  margin-bottom: 0;
 }
 .product_frame .left_menu .left_menu_border > ul > li .name {
   display: flex;
@@ -51,10 +55,10 @@
   transition: all 0.3s;
 }
 .product_frame .left_menu .left_menu_border > ul > li > ul > li {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .product_frame .left_menu .left_menu_border > ul > li > ul > li:first-child {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .product_frame .left_menu .left_menu_border > ul > li > ul > li:last-child {
   margin-bottom: 0;
@@ -70,8 +74,7 @@
 }
 .product_frame .product_border {
   flex: 2;
-  padding-top: 100px;
-  margin: 0 100px 0 0;
+  padding-top: 60px;
 }
 .product_frame .product_border .product_list {
   display: flex;
@@ -82,7 +85,7 @@
 .product_frame .product_border .product_list .item {
   flex: 0 0 33.33%;
   padding: 0 10px;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 .product_frame .product_border .product_list .item a {
   display: block;
@@ -94,7 +97,7 @@
   background-position: center;
   background-repeat: no-repeat;
   border: 2px solid #000;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   position: relative;
   transition: all 0.3s;
 }
@@ -122,23 +125,24 @@
   transform: translate(-50%, calc(-50% - 50px));
   opacity: 0;
   transition: all 0.5s;
+  text-align: center;
 }
 .product_frame .product_border .product_list .item a:hover .image .hover {
   transform: translate(-50%, -50%);
   opacity: 1;
 }
 .product_frame .product_border .product_list .item a .image .hover i {
-  font-size: 4.5rem;
+  font-size: 4rem;
   margin-bottom: 10px;
   color: #fff;
 }
 .product_frame .product_border .product_list .item a .image .hover .txt {
-  font-size: 1.35rem;
+  font-size: 1.25rem;
   font-weight: 700;
   color: #fff;
 }
 .product_frame .product_border .product_list .item a .name {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #333;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -148,6 +152,76 @@
 .product_frame .product_border .product_list .item a:hover .name {
   text-decoration: underline;
 }
+@media (max-width: 1200px) {
+  .product_frame {
+    flex-wrap: wrap;
+  }
+  .product_frame .left_menu {
+    flex: 0 0 100%;
+    margin-right: 0;
+    padding: 0;
+    position: relative;
+  }
+  .product_frame .left_menu .left_menu_border {
+    width: 100%;
+  }
+  .product_frame .left_menu .left_menu_border .title {
+    margin-bottom: 0;
+    padding: 15px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: space-between;
+    color: #333;
+  }
+  .product_frame .left_menu .left_menu_border .title::after {
+    content: '\f0c9';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 700;
+    font-size: 1.25rem;
+  }
+  .product_frame .left_menu .left_menu_border > ul {
+    position: absolute;
+    top: 50px;
+    background-color: #fff;
+    width: 100%;
+    z-index: 2;
+    padding: 15px;
+    border: 1px solid #eaeaea;
+    border-top: none;
+    font-size: 1.25rem;
+    display: block;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: all .3s;
+  }
+  .product_frame .left_menu .left_menu_border > ul.active {
+    transform: scaleY(100%);
+  }
+  .product_frame .left_menu .left_menu_border > ul > li{
+    margin-bottom: 10px;
+  }
+  .product_frame .left_menu .left_menu_border > ul > li > ul{
+    padding-left: 10px;
+  }
+  .product_frame .left_menu .left_menu_border > ul > li > ul > li{
+    margin-bottom: 10px;
+  }
+  .product_frame .left_menu .left_menu_border > ul > li > ul > li:first-child{
+    margin-top: 10px;
+  }
+  .product_frame .product_border {
+    flex: 0 0 100%;
+    padding-top: 30px;
+  }
+  .product_frame .product_border .product_list .item {
+    flex: 0 0 50%;
+    margin-bottom: 30px;
+  }
+  .product_frame .product_border .product_list .item a .image .hover i{
+    font-size: 3rem;
+  }
+}
 
 /*商品內頁*/
 .product_frame .product_border .product_info {
@@ -155,7 +229,7 @@
 }
 .product_frame .product_border .product_info .top {
   display: flex;
-  margin-bottom: 170px;
+  margin-bottom: 100px;
 }
 .product_frame .product_border .product_info .top .main_pic {
   flex: 4;
@@ -169,26 +243,26 @@
 }
 .product_frame .product_border .product_info .top .text {
   flex: 3;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 .product_frame .product_border .product_info .top .text .name {
-  font-size: 2.5rem;
-  margin-bottom: 50px;
+  font-size: 1.75rem;
+  margin-bottom: 20px;
 }
 .product_frame .product_border .product_info .top .text .desc {
-  font-size: 1.7rem;
-  padding-bottom: 60px;
-  margin-bottom: 30px;
+  font-size: 1.05rem;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
   border-bottom: 1px solid #333;
 }
 .product_frame .product_border .product_info .top .text .price_qty {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .product_frame .product_border .product_info .top .text .price_qty .price {
-  font-size: 2rem;
+  font-size: 1.25rem;
 }
 .product_frame .product_border .product_info .top .text .price_qty .qty {
   display: flex;
@@ -196,8 +270,8 @@
 }
 .product_frame .product_border .product_info .top .text .price_qty .qty label {
   margin-bottom: 0;
-  margin-right: 15px;
-  font-size: 1.25rem;
+  margin-right: 10px;
+  font-size: 1rem;
 }
 .product_frame .product_border .product_info .top .text .price_qty .qty .input {
   display: flex;
@@ -222,8 +296,8 @@
   .qty
   .input
   .plus {
-  flex: 0 0 40px;
-  height: 40px;
+  flex: 0 0 35px;
+  height: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -238,60 +312,117 @@
   .price_qty
   .qty
   .input
+  .minus:hover,
+.product_frame
+  .product_border
+  .product_info
+  .top
+  .text
+  .price_qty
+  .qty
+  .input
+  .plus:hover {
+  opacity: 0.8;
+}
+.product_frame
+  .product_border
+  .product_info
+  .top
+  .text
+  .price_qty
+  .qty
+  .input
   input {
   border: none;
   outline: none;
   flex: 1;
   min-width: 0;
-  max-width: 120px;
+  max-width: 100px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   background-color: transparent;
 }
-.product_frame .product_border .product_info .top .text .add_cart{
+.product_frame .product_border .product_info .top .text .add_cart {
   display: flex;
   justify-content: flex-end;
 }
-.product_frame .product_border .product_info .top .text .add_cart a{
-  width: 230px;
-  height: 60px;
+.product_frame .product_border .product_info .top .text .add_cart a {
+  width: 180px;
+  height: 40px;
   background-color: #0185cd;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   border-radius: 50px;
   cursor: pointer;
   text-decoration: none;
 }
-.product_frame .product_border .product_info .top .text .add_cart a:hover{
-  opacity: .8;
+.product_frame .product_border .product_info .top .text .add_cart a:hover {
+  opacity: 0.8;
 }
-.product_frame .product_border .product_info .bottom ul.tabs{
+.product_frame .product_border .product_info .bottom ul.tabs {
   display: flex;
   list-style: none;
   padding-left: 0;
   border-bottom: 1px solid #ccc;
   margin-bottom: 0;
 }
-.product_frame .product_border .product_info .bottom ul.tabs li{
-  font-size: 1.75rem;
-  padding: 0 30px 30px 30px;
+.product_frame .product_border .product_info .bottom ul.tabs li {
+  font-size: 1.5rem;
+  padding: 0 20px 20px 20px;
   cursor: pointer;
 }
-.product_frame .product_border .product_info .bottom ul.tabs li.active{
+.product_frame .product_border .product_info .bottom ul.tabs li.active {
   border-bottom: 2px solid #0185cd;
 }
-.product_frame .product_border .product_info .bottom ul.panels{
+.product_frame .product_border .product_info .bottom ul.panels {
   list-style: none;
   padding-left: 0;
   margin-bottom: 80px;
 }
-.product_frame .product_border .product_info .bottom ul.panels li{
-  padding-top: 70px;
+.product_frame .product_border .product_info .bottom ul.panels li {
+  padding-top: 40px;
   display: none;
 }
-.product_frame .product_border .product_info .bottom ul.panels li.active{
+.product_frame .product_border .product_info .bottom ul.panels li.active {
   display: block;
+}
+@media (max-width: 1200px) {
+  .product_frame .product_border .product_info .top {
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+  }
+  .product_frame .product_border .product_info .top .main_pic {
+    flex: 0 0 100%;
+    margin-bottom: 20px;
+  }
+  .product_frame .product_border .product_info .top .text {
+    flex: 0 0 100%;
+    padding-left: 0;
+  }
+  .product_frame .product_border .product_info .top .text .name{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
+  
+  .product_frame .product_border .product_info .top .text .price_qty{
+    margin-bottom: 50px;
+  }
+  .product_frame .product_border .product_info .top .text .price_qty .price{
+    font-size: 1.5rem;
+  }
+  .product_frame .product_border .product_info .top .text .add_cart a{
+    width: 100%;
+    height: 60px;
+    font-size: 1.5rem;
+  }
+  .product_frame .product_border .product_info .bottom ul.tabs li{
+    font-size: 1.25rem;
+    padding: 0 15px 10px 15px;
+  }
+  .product_frame .product_border .product_info .bottom ul.panels li{
+    padding-top: 20px;
+  }
 }
